Clean and structured code

--- a/code/code_samples.ipynb
+++ b/code/code_samples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6046fea4",
+   "id": "767bc993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,6 @@
     "- RAG integration for context-aware responses\n",
     "- Evaluation metrics for retrieval systems\n",
     "\n",
-    "Author: Mahesh Sadupalli\n",
-    "Project: RAG-assisted LLM-based Verification\n",
     "\"\"\"\n",
     "\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -27,13 +25,17 @@
     "import torch.nn as nn\n",
     "from torch.nn import functional as F\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from typing import List, Dict, Tuple\n",
-    "\n",
-    "\n",
-    "# =============================================================================\n",
+    "from typing import List, Dict, Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3802725d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 1. Neural Code Search Implementation\n",
-    "# =============================================================================\n",
-    "\n",
     "class NeuralCodeSearch:\n",
     "    \"\"\"\n",
     "    Neural code search system using embedding models to match \n",
@@ -91,12 +93,17 @@
     "        features.append(code_file.get('comments', ''))\n",
     "        features.append(' '.join(code_file.get('function_names', [])))\n",
     "        features.append(code_file.get('module_purpose', ''))\n",
-    "        return ' '.join(filter(None, features))\n",
-    "\n",
-    "\n",
-    "# =============================================================================\n",
+    "        return ' '.join(filter(None, features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd3bcc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2. Contrastive Learning for Code-Requirement Alignment\n",
-    "# =============================================================================\n",
     "\n",
     "class ContrastiveCodeEncoder(nn.Module):\n",
     "    \"\"\"\n",
@@ -183,12 +190,17 @@
     "            total_loss += loss.item()\n",
     "        \n",
     "        avg_loss = total_loss / len(train_data)\n",
-    "        print(f\"Epoch {epoch+1}/{epochs}: Average Loss = {avg_loss:.4f}\")\n",
-    "\n",
-    "\n",
-    "# =============================================================================\n",
+    "        print(f\"Epoch {epoch+1}/{epochs}: Average Loss = {avg_loss:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0eef2a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 3. RAG Integration with Code Context\n",
-    "# =============================================================================\n",
     "\n",
     "class CodeRAGSystem:\n",
     "    \"\"\"\n",
@@ -286,12 +298,18 @@
     "        3. Integration: Check compatibility with existing verification framework\n",
     "        4. Validation: Use assertion patterns from similar modules\n",
     "\n",
-    "        The retrieved files provide excellent starting points for your implementation.\"\"\"\n",
-    "\n",
-    "\n",
-    "# =============================================================================\n",
+    "        The retrieved files provide excellent starting points for your implementation.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3caae4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 4. Evaluation Metrics for Code Search Systems\n",
-    "# =============================================================================\n",
+    "\n",
     "\n",
     "def calculate_mrr(ranked_results: List[List[bool]]) -> float:\n",
     "    \"\"\"\n",
@@ -347,12 +365,17 @@
     "        ndcg = actual_dcg / ideal_dcg if ideal_dcg > 0 else 0\n",
     "        ndcg_scores.append(ndcg)\n",
     "    \n",
-    "    return np.mean(ndcg_scores)\n",
-    "\n",
-    "\n",
-    "# =============================================================================\n",
+    "    return np.mean(ndcg_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6046fea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 5. Example Usage & Demo\n",
-    "# =============================================================================\n",
     "\n",
     "def demo_neural_code_search():\n",
     "    \"\"\"Demonstration of neural code search system\"\"\"\n",
@@ -480,7 +503,7 @@
     "    and RAG implementation.\n",
     "    \"\"\"\n",
     "    \n",
-    "    print(\"🔍 Neural Code Search & RAG Demonstration\")\n",
+    "    print(\"Neural Code Search & RAG Demonstration\")\n",
     "    print(\"=\" * 50)\n",
     "    \n",
     "    # Run demonstrations\n",
@@ -494,13 +517,18 @@
     "    print(\"- Contrastive learning for code-requirement alignment\")\n",
     "    print(\"- RAG integration with LLM generation\")\n",
     "    print(\"- Evaluation metrics (MRR, NDCG)\")\n",
-    "    print(\"- End-to-end AI lifecycle implementation\")\n",
+    "    print(\"- End-to-end AI lifecycle implementation\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9b00f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "\n",
-    "# =============================================================================\n",
     "# 6. Configuration and Requirements\n",
-    "# =============================================================================\n",
-    "\n",
     "# Required packages for this implementation:\n",
     "\"\"\"\n",
     "sentence-transformers>=2.2.0\n",
